# pq_bitcoin

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: prove.yml
contracts/: .env.example  Makefile  README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: MerkleTree.sol  PQBitcoin.sol
contracts/src/fixtures/: plonk-fixture.json
contracts/test/: PQBitcoin.t.sol
docs/: BIP-CHECKQUANTUMSIG.md  diagrams.md  implementation_section.tex  securing_coinbase_section.tex
eth_program/: Cargo.toml
eth_program/src/: main.rs
examples/: basic_migration.rs  taproot_commitment.rs
indexer/: Cargo.toml
indexer/src/: main.rs
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  op_return.rs  taproot.rs
lib/tests/: btc_migrate_integration.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
