[workspace]
members = ["lib", "program", "eth_program", "script"]
exclude = ["indexer"]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "1.1.1"
alloy-primitives = "1.1.1"
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-5.0.0" } # Note this tag aligns with SP1 v5.x
hashes = { package = "bitcoin_hashes", version = ">= 0.12, <= 0.14", default-features = false }
sp1-zkvm = "5.0.4"

# Add explicit SP1 dependencies (aligned version)
sp1-sdk = "5.0.4"
sp1-lib = "5.0.4"
sp1-primitives = "5.0.4"

# Post-quantum cryptography (ML-DSA / CRYSTALS-Dilithium, FIPS-204)
ml-dsa = { version = "0.1.0-rc.7", default-features = false, features = [
    "rand_core",
    "alloc",
] }
signature = "2"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.8-sp1-4.0.0-rc.3" }
