[package]
version = "0.1.0"
name = "pq_bitcoin-eth-program"
edition = "2024"

[dependencies]
pq_bitcoin-lib = { path = "../lib" }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
sp1-zkvm = { workspace = true }
secp256k1 = { workspace = true }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.8-sp1-4.0.0-rc.3" }
