[package]
version = "0.1.0"
name = "pq_bitcoin-script"
edition = "2024"
default-run = "pq_bitcoin"

[[bin]]
name = "pq_bitcoin"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[[bin]]
name = "btc_migrate"
path = "src/bin/btc_migrate.rs"

[[bin]]
name = "taproot_addr"
path = "src/bin/taproot_addr.rs"

[dependencies]
sp1-sdk = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
pq_bitcoin-lib = { path = "../lib" }
dotenv = "0.15.0"
secp256k1 = { workspace = true }
hashes = { workspace = true }
rand = "0.9.1"

# Post-quantum cryptography (ML-DSA / CRYSTALS-Dilithium)
ml-dsa = { workspace = true }
signature = { workspace = true }

[build-dependencies]
sp1-build = "5.0.0"
